[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
clock = "0.3.2"
config = "0.13.3"
env_logger = "0.10.0"
false = "0.0.0"
features = "0.10.0"
log = "0.4.19"
once_cell = "1.18.0"
serde = { version = "1.0.170", features = ["derive"] }
sqlx = { version = "0.7.0", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.18"

